fix some spacing

--- a/_mockUp/bin/css/main.css
+++ b/_mockUp/bin/css/main.css
@@ -245,6 +245,10 @@ p {
   margin-bottom: 12px;
   margin-bottom: 0.75rem;
 }
+.span--spacing {
+  padding: 0 4px;
+  padding: 0rem 0.25rem;
+}
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
 *
@@ -270,7 +274,9 @@ body {
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
 li > ul,
-li > ol {
+li > ol,
+dt,
+dd {
   margin-bottom: 1.25;
 }
 /*
