--- a/_mockUp/src/styl/ITCSS/base/_base.list.styl
+++ b/_mockUp/src/styl/ITCSS/base/_base.list.styl
@@ -11,5 +11,5 @@
 
 
 // Fluide images for responsive
-li > ul, li > ol
-        margin-bottom calc_line-height( wf_line-height, wf_font-size )
+li > ul, li > ol, dt, dd
+    margin-bottom calc_line-height( wf_line-height, wf_font-size )
